[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olah"
version = "0.3.3"
description = "Self-hosted lightweight huggingface mirror."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi", "fastapi-utils", "httpx", "numpy", "pydantic<=2.8.2", "pydantic-settings<=2.4.0", "requests", "toml",
    "rich>=10.0.0", "shortuuid", "uvicorn", "tenacity>=8.2.2", "pytz", "cachetools", "GitPython",
    "PyYAML", "typing_inspect>=0.9.0", "huggingface_hub", "jinja2", "python-multipart"
]

[project.optional-dependencies]
dev = ["black==24.10.0", "pylint==3.3.1", "pytest==8.3.3"]

[project.urls]
"Homepage" = "https://github.com/vtuber-plan/olah"
"Bug Tracker" = "https://github.com/vtuber-plan/olah/issues"

[project.scripts]
olah-cli = "olah.server:cli"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.setuptools.package-data]
static = ["*.html"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
